# RAG

./: .env.example  .gitignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260703_0001_enable_pgvector_extension.py  20260703_0002_add_auth_tables.py  20260703_0003_add_tenancy_tables.py  20260703_0004_add_repository_tables.py  20260703_0005_add_document_tables.py  20260704_0006_add_document_content_table.py  20260704_0007_add_chunk_tables.py  20260705_0008_add_embedding_tables.py  20260706_0009_add_vector_index_tables.py  20260707_0010_add_retrieval_tables.py  20260708_0011_add_hybrid_retrieval.py  20260709_0012_add_query_understanding.py  20260710_0013_add_advanced_retrieval.py  20260711_0014_add_reranking.py  20260712_0015_add_prompt_tables.py  20260713_0016_add_llm_requests.py  20260714_0017_add_conversation_tables.py  20260715_0018_add_semantic_cache_entries.py  20260716_0019_add_provider_credentials.py
backend/app/: main.py
backend/app/api/: chunk_deps.py  conversation_deps.py  deps.py  document_deps.py  embedding_deps.py  llm_deps.py  prompt_deps.py  retrieval_deps.py  tenancy_deps.py  vector_index_deps.py
backend/app/core/: citations.py  config.py  context_window.py  document_validation.py  exceptions.py  logging.py  prompt_render.py  redis.py  security.py  storage.py  storage_adapter.py  task_queue.py  token_budget.py
backend/app/db/: session.py
backend/app/middleware/: metrics.py  rate_limit.py  request_context.py  security_headers.py
backend/app/models/: audit_log.py  base.py  cache.py  chunk.py  conversation.py  document.py  document_content.py  embedding.py  invitation.py  llm_request.py  membership.py  organization.py  project.py  prompt.py  provider_credential.py  repository.py  retrieval.py  session.py  user.py  vector_index.py  workspace.py
backend/app/repositories/: audit_log_repository.py  base.py  chunk_repository.py  conversation_repository.py  document_repository.py  embedding_repository.py  invitation_repository.py  llm_request_repository.py  membership_repository.py  organization_repository.py  project_repository.py  (+9 more)
backend/tests/: conftest.py  test_auth.py  test_caching.py  test_chunks.py  test_conversation_llm_helpers.py  test_conversations.py  test_document_validation.py  test_documents.py  test_embeddings.py  test_health.py  test_llm_gateway.py  test_llm_requests.py  test_prompts.py  test_provider_credentials.py  test_repositories.py  test_retrievals.py  test_security.py  test_tenancy.py  test_vector_indexes.py
worker/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
worker/benchmark_worker/: tasks.py
worker/chunk_worker/: tasks.py
worker/common/: cache.py  celery_app.py  config.py  credentials.py  db.py  logging.py  org_resolution.py  storage.py  tasks.py  text_utils.py  tokenizer.py
worker/document_worker/: tasks.py
worker/embedding_worker/: tasks.py
worker/evaluation_worker/: tasks.py
worker/index_worker/: tasks.py
worker/retrieval_worker/: bm25.py  compression.py  fusion.py  mmr.py  parent_expansion.py  tasks.py
worker/scheduler/: beat_schedule.py
worker/tests/: conftest.py  test_bm25.py  test_build_index.py  test_chunk_document.py  test_chunking.py  test_cleaning.py  test_compression.py  test_embed_chunk_set.py  test_embedding_providers.py  test_execute_retrieval.py  test_filter_extractor.py  test_finalize_upload.py  test_fusion.py  test_fusion_multi.py  test_health_task.py  test_metadata.py  test_mmr.py  test_ocr.py  test_parent_expansion.py  test_parse_document.py  test_parsers.py  test_query_classifier.py  test_query_expander.py  test_query_rewriter.py  test_reranking.py  test_retrieval_cache.py  test_vector_index_providers.py
(+232 files in other folders)
