[project]
name = "enterprise-rag-studio-worker"
version = "0.1.0"
description = "Enterprise RAG Studio background workers"
requires-python = ">=3.11"
dependencies = [
    "celery==5.4.0",
    "redis==5.2.1",
    "pydantic-settings==2.7.1",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "ruff==0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["common*", "document_worker*", "chunk_worker*", "embedding_worker*", "retrieval_worker*", "evaluation_worker*", "benchmark_worker*", "scheduler*"]
