[project]
name = "enterprise-rag-studio-worker"
version = "0.1.0"
description = "Enterprise RAG Studio background workers"
requires-python = ">=3.11"
dependencies = [
    "celery==5.4.0",
    "redis==5.2.1",
    "pydantic-settings==2.7.1",
    "structlog==24.4.0",
    "sqlalchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "minio==7.2.13",
    "pymupdf==1.24.14",
    "python-docx==1.1.2",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "markdown-it-py==3.0.0",
    "pandas==2.2.3",
    "langdetect==1.0.9",
    "pytesseract==0.3.13",
    "pillow==11.0.0",
    "pdf2image==1.17.0",
    "tiktoken==0.8.0",
    "scikit-learn==1.5.2",
    "fastembed==0.8.0",
    "openai==1.57.4",
    "httpx==0.28.1",
    "pgvector==0.3.6",
    "qdrant-client==1.18.0",
    "chromadb-client==1.5.9",
    "rank-bm25==0.2.2",
    "flashrank==0.2.10",
    "cryptography==43.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "ruff==0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["common*", "document_worker*", "chunk_worker*", "embedding_worker*", "index_worker*", "retrieval_worker*", "evaluation_worker*", "benchmark_worker*", "scheduler*"]
